@@ -10,6 +10,8 @@
    {registered, []},
    {applications, [
         cloudi_core,
+        cloudi_x_jsx,
+        cloudi_x_trie,
         stdlib,
         kernel
         ]}]}.
