@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2022-08-27 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Add restored time tracking to cloudi_service_health_check
+
 2022-08-26 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add cloudi_service_health_check for remote host health checks
